kotlin-ide/idea/testData/multiplatform/incompleteActualization/common/common.kt
package foo

expect class <!NO_ACTUAL_FOR_EXPECT!>ExpectInCommonActualInJsOnly<!>
expect class <!NO_ACTUAL_FOR_EXPECT!>ExpectInCommonActualInJvmOnly<!>
